# SOLO-RPG-WAR-GAME-GM-

./: .gitignore  Birthright.bat  CLAUDE.md  Oracle.bat  Wargame.bat  create_shortcut.vbs  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/agents/: CLAUDE.md  README-agent-team.md  code-reviewer.md  dpg-engineer.md  gamemaster-designer.md  oracle-architect.md  qa-tester.md
docs/audits/: solo-rpg-data-audit.md
docs/plans/: wargame-mode-enhancement.md
oracle/: __init__.py  birthright_character.py  cli.py  dice.py  fate.py  gamesystems.py  generators.py  importers.py  journal.py  main.py  mood.py  npc.py  roster.py  tables.py  tomlio.py  wargame.py  windows.py
oracle/data/alt_history/: divergences.toml
oracle/data/core/: backstory_elements.toml  battle_events.toml  character_quirks.toml  combat_narration.toml  combat_situations.toml  consequences.toml  descriptors.toml  dialogue_prompts.toml  directions.toml  discoveries.toml  downtime.toml  environment_hazards.toml  loot.toml  (+13 more)
oracle/gm/: __init__.py  brain.py  complication_generator.py  enhanced_responder.py  meaning.py  memory.py  npc_memory.py  orchestrator.py  pacing.py  personality.py  responder.py  world_model.py
oracle/gui/: __init__.py  app.py  config.py  launcher.py  mode_picker.py  oracle_app.py  oracle_launcher.py  style.py  wargame_app.py
oracle/wargame/: __init__.py
production/war_room/: briefing.md  discussion.md  oracle_enhancement_plan.md  synthesis.md
scripts/debug/: test_display.py  test_oracle_minimal.py
tests/: test_smart_gm.py  test_wargame_engines.py
(+365 files in other folders)
